Fix : 자바 버전(11)에 따라서 .toList()를 .collect(Collectors.toList()))로 수정